force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <label>Milestone  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>