force-app/main/default/objects/Milestone__c/fields/Perc_Complete__c.field-meta.xml
<CustomField>
    <fullName>Perc_Complete__c</fullName>
    <formula>IF( Total_To_Do_Items__c &gt; 0, (To_Do_Items_Completed__c/Total_To_Do_Items__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>