force-app/main/default/objects/Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( TEXT(Perc_Complete__c) = &apos;0&apos;, &apos;Not Started&apos;, IF(TEXT(Perc_Complete__c) = &apos;1&apos;, &apos;Complete&apos;, &apos;In Progress&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>