force-app/main/default/objects/Milestone__c/fields/To_Do_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>To_Do_Items_Completed__c</fullName>
    <label>To-Do Items Completed</label>
    <summaryFilterItems>
        <field>To_Do_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>