force-app/main/default/objects/Milestone__c/fields/Total_To_Do_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_To_Do_Items__c</fullName>
    <label>Total To-Do Items</label>
    <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>